// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScdlGrantParser convertValidateData also returns errors 1`] = `
[
  {
    "UeNotification": false,
    "aidSystem": "65d5b6c7-102c-4440-ac3b-768f708edc0a",
    "allocatorName": "TEST_SOCLE_SCDL",
    "allocatorSiret": "12000123400023",
    "amount": 45000,
    "associationName": "ANNO_1",
    "associationRna": "W123456789",
    "associationSiret": "13579246800043",
    "bloquant": "oui",
    "colonne": "something",
    "conventionDate": 2019-05-10T00:00:00.000Z,
    "decisionReference": "2102661732",
    "grantPercentage": 1,
    "idRAE": "Non",
    "message": "clarify problem",
    "object": "Immigration et territoire de la politique de la ville - citoyenneté et héros militaires - Lutte contre les discriminations, le racisme et l'antisémitisme - Figures de réussite, figures de l'exemplarité républicaine : artistes",
    "paymentConditions": "aide en numéraire",
    "paymentEndDate": 2019-05-20T00:00:00.000Z,
    "paymentStartDate": 2019-05-20T00:00:00.000Z,
    "valeur": "something",
  },
]
`;

exports[`ScdlGrantParser convertValidateData also returns errors with problems in optional field so valid result 1`] = `
[
  {
    "UeNotification": false,
    "aidSystem": "65d5b6c7-102c-4440-ac3b-768f708edc0a",
    "allocatorName": "TEST_SOCLE_SCDL",
    "allocatorSiret": "12000123400023",
    "amount": 45000,
    "associationName": "ANNO_1",
    "associationRna": "W123456789",
    "associationSiret": "13579246800043",
    "bloquant": "non",
    "colonne": "something",
    "conventionDate": 2019-05-10T00:00:00.000Z,
    "decisionReference": "2102661732",
    "grantPercentage": 1,
    "idRAE": "Non",
    "message": "clarify problem",
    "object": "Immigration et territoire de la politique de la ville - citoyenneté et héros militaires - Lutte contre les discriminations, le racisme et l'antisémitisme - Figures de réussite, figures de l'exemplarité républicaine : artistes",
    "paymentConditions": "aide en numéraire",
    "paymentEndDate": 2019-05-20T00:00:00.000Z,
    "paymentStartDate": 2019-05-20T00:00:00.000Z,
    "valeur": "something",
  },
]
`;

exports[`ScdlGrantParser convertValidateData saves cleaned up optional fields  1`] = `
[
  {
    "__data__": {
      "UeNotification": false,
      "aidSystem": "65d5b6c7-102c-4440-ac3b-768f708edc0a",
      "allocatorName": "TEST_SOCLE_SCDL",
      "allocatorSiret": "12000123400023",
      "amount": 45000,
      "associationName": "ANNO_1",
      "associationRna": "W123456789",
      "associationSiret": "13579246800043",
      "conventionDate": 2019-05-10T00:00:00.000Z,
      "decisionReference": "2102661732",
      "grantPercentage": 1,
      "idRAE": "Non",
      "object": "Immigration et territoire de la politique de la ville - citoyenneté et héros militaires - Lutte contre les discriminations, le racisme et l'antisémitisme - Figures de réussite, figures de l'exemplarité républicaine : artistes",
      "paymentConditions": "aide en numéraire",
      "paymentEndDate": 2019-05-20T00:00:00.000Z,
      "paymentStartDate": 2019-05-20T00:00:00.000Z,
    },
    "updateDate": 2025-01-16T00:00:00.000Z,
    "value": "clean",
  },
  {
    "__data__": {
      "UeNotification": false,
      "aidSystem": "65d5b6c7-102c-4440-ac3b-768f708edz27",
      "allocatorName": "TEST_SOCLE_SCDL",
      "allocatorSiret": "12000123400023",
      "amount": 50000,
      "associationName": "ANNO_2",
      "associationRna": "W123456974",
      "associationSiret": "11223344500034",
      "conventionDate": 2019-08-30T00:00:00.000Z,
      "decisionReference": "2102763867",
      "grantPercentage": 0.5,
      "idRAE": "Non",
      "object": "Les engagés de l'AFEV contre le racisme et l'antisémistisme",
      "paymentConditions": "aide en numéraire",
      "paymentEndDate": 2022-02-14T00:00:00.000Z,
      "paymentStartDate": 2019-02-15T00:00:00.000Z,
    },
    "updateDate": 2025-01-16T00:00:00.000Z,
    "value": "clean",
  },
  {
    "__data__": {
      "UeNotification": false,
      "aidSystem": "65d5b6c7-102c-4440-ac3b-768f708endyu",
      "allocatorName": "TEST_SOCLE_SCDL",
      "allocatorSiret": "12000123400023",
      "amount": 5000,
      "associationName": "ANNO_1",
      "associationRna": "W123158569",
      "associationSiret": "98876554100014",
      "conventionDate": 2019-05-21T00:00:00.000Z,
      "decisionReference": "2102672573",
      "grantPercentage": 1,
      "idRAE": "Non",
      "object": "Pride Marseille 2019",
      "paymentConditions": "aide en numéraire",
      "paymentEndDate": 2019-05-30T00:00:00.000Z,
      "paymentStartDate": 2019-05-30T00:00:00.000Z,
    },
    "updateDate": 2025-01-16T00:00:00.000Z,
    "value": "clean",
  },
  {
    "__data__": {
      "UeNotification": false,
      "aidSystem": "65d5b6c7-102c-4440-ac3b-768f708mpo8i",
      "allocatorName": "TEST_SOCLE_SCDL",
      "allocatorSiret": "12000123400023",
      "amount": 10000,
      "associationName": "ANNO_3",
      "associationRna": "W123111256",
      "associationSiret": "74185296300016",
      "conventionDate": 2019-10-21T00:00:00.000Z,
      "decisionReference": "2102804885",
      "grantPercentage": 1,
      "idRAE": "Non",
      "object": ""A la mémoire des travailleurs chinois de la Grande guerre et du traité de Versailles"",
      "paymentConditions": "aide en numéraire",
      "paymentEndDate": 2019-10-25T00:00:00.000Z,
      "paymentStartDate": 2019-10-25T00:00:00.000Z,
    },
    "updateDate": 2025-01-16T00:00:00.000Z,
    "value": "clean",
  },
]
`;

exports[`ScdlGrantParser convertValidateData should return storableChunk 1`] = `
[
  {
    "UeNotification": false,
    "__data__": {
      "UeNotification": false,
      "aidSystem": "65d5b6c7-102c-4440-ac3b-768f708edc0a",
      "allocatorName": "TEST_SOCLE_SCDL",
      "allocatorSiret": "12000123400023",
      "amount": 45000,
      "associationName": "ANNO_1",
      "associationRna": "W123456789",
      "associationSiret": "13579246800043",
      "conventionDate": 2019-05-10T00:00:00.000Z,
      "decisionReference": "2102661732",
      "grantPercentage": 1,
      "idRAE": "Non",
      "object": "Immigration et territoire de la politique de la ville - citoyenneté et héros militaires - Lutte contre les discriminations, le racisme et l'antisémitisme - Figures de réussite, figures de l'exemplarité républicaine : artistes",
      "paymentConditions": "aide en numéraire",
      "paymentEndDate": 2019-05-20T00:00:00.000Z,
      "paymentStartDate": 2019-05-20T00:00:00.000Z,
    },
    "aidSystem": "65d5b6c7-102c-4440-ac3b-768f708edc0a",
    "allocatorName": "TEST_SOCLE_SCDL",
    "allocatorSiret": "12000123400023",
    "amount": 45000,
    "associationName": "ANNO_1",
    "associationRna": "W123456789",
    "associationSiret": "13579246800043",
    "conventionDate": 2019-05-10T00:00:00.000Z,
    "decisionReference": "2102661732",
    "grantPercentage": 1,
    "idRAE": "Non",
    "object": "Immigration et territoire de la politique de la ville - citoyenneté et héros militaires - Lutte contre les discriminations, le racisme et l'antisémitisme - Figures de réussite, figures de l'exemplarité républicaine : artistes",
    "paymentConditions": "aide en numéraire",
    "paymentEndDate": 2019-05-20T00:00:00.000Z,
    "paymentStartDate": 2019-05-20T00:00:00.000Z,
    "updateDate": 2025-01-16T00:00:00.000Z,
  },
  {
    "UeNotification": false,
    "__data__": {
      "UeNotification": false,
      "aidSystem": "65d5b6c7-102c-4440-ac3b-768f708edz27",
      "allocatorName": "TEST_SOCLE_SCDL",
      "allocatorSiret": "12000123400023",
      "amount": 50000,
      "associationName": "ANNO_2",
      "associationRna": "W123456974",
      "associationSiret": "11223344500034",
      "conventionDate": 2019-08-30T00:00:00.000Z,
      "decisionReference": "2102763867",
      "grantPercentage": 0.5,
      "idRAE": "Non",
      "object": "Les engagés de l'AFEV contre le racisme et l'antisémistisme",
      "paymentConditions": "aide en numéraire",
      "paymentEndDate": 2022-02-14T00:00:00.000Z,
      "paymentStartDate": 2019-02-15T00:00:00.000Z,
    },
    "aidSystem": "65d5b6c7-102c-4440-ac3b-768f708edz27",
    "allocatorName": "TEST_SOCLE_SCDL",
    "allocatorSiret": "12000123400023",
    "amount": 50000,
    "associationName": "ANNO_2",
    "associationRna": "W123456974",
    "associationSiret": "11223344500034",
    "conventionDate": 2019-08-30T00:00:00.000Z,
    "decisionReference": "2102763867",
    "grantPercentage": 0.5,
    "idRAE": "Non",
    "object": "Les engagés de l'AFEV contre le racisme et l'antisémistisme",
    "paymentConditions": "aide en numéraire",
    "paymentEndDate": 2022-02-14T00:00:00.000Z,
    "paymentStartDate": 2019-02-15T00:00:00.000Z,
    "updateDate": 2025-01-16T00:00:00.000Z,
  },
  {
    "UeNotification": false,
    "__data__": {
      "UeNotification": false,
      "aidSystem": "65d5b6c7-102c-4440-ac3b-768f708endyu",
      "allocatorName": "TEST_SOCLE_SCDL",
      "allocatorSiret": "12000123400023",
      "amount": 5000,
      "associationName": "ANNO_1",
      "associationRna": "W123158569",
      "associationSiret": "98876554100014",
      "conventionDate": 2019-05-21T00:00:00.000Z,
      "decisionReference": "2102672573",
      "grantPercentage": 1,
      "idRAE": "Non",
      "object": "Pride Marseille 2019",
      "paymentConditions": "aide en numéraire",
      "paymentEndDate": 2019-05-30T00:00:00.000Z,
      "paymentStartDate": 2019-05-30T00:00:00.000Z,
    },
    "aidSystem": "65d5b6c7-102c-4440-ac3b-768f708endyu",
    "allocatorName": "TEST_SOCLE_SCDL",
    "allocatorSiret": "12000123400023",
    "amount": 5000,
    "associationName": "ANNO_1",
    "associationRna": "W123158569",
    "associationSiret": "98876554100014",
    "conventionDate": 2019-05-21T00:00:00.000Z,
    "decisionReference": "2102672573",
    "grantPercentage": 1,
    "idRAE": "Non",
    "object": "Pride Marseille 2019",
    "paymentConditions": "aide en numéraire",
    "paymentEndDate": 2019-05-30T00:00:00.000Z,
    "paymentStartDate": 2019-05-30T00:00:00.000Z,
    "updateDate": 2025-01-16T00:00:00.000Z,
  },
  {
    "UeNotification": false,
    "__data__": {
      "UeNotification": false,
      "aidSystem": "65d5b6c7-102c-4440-ac3b-768f708mpo8i",
      "allocatorName": "TEST_SOCLE_SCDL",
      "allocatorSiret": "12000123400023",
      "amount": 10000,
      "associationName": "ANNO_3",
      "associationRna": "W123111256",
      "associationSiret": "74185296300016",
      "conventionDate": 2019-10-21T00:00:00.000Z,
      "decisionReference": "2102804885",
      "grantPercentage": 1,
      "idRAE": "Non",
      "object": ""A la mémoire des travailleurs chinois de la Grande guerre et du traité de Versailles"",
      "paymentConditions": "aide en numéraire",
      "paymentEndDate": 2019-10-25T00:00:00.000Z,
      "paymentStartDate": 2019-10-25T00:00:00.000Z,
    },
    "aidSystem": "65d5b6c7-102c-4440-ac3b-768f708mpo8i",
    "allocatorName": "TEST_SOCLE_SCDL",
    "allocatorSiret": "12000123400023",
    "amount": 10000,
    "associationName": "ANNO_3",
    "associationRna": "W123111256",
    "associationSiret": "74185296300016",
    "conventionDate": 2019-10-21T00:00:00.000Z,
    "decisionReference": "2102804885",
    "grantPercentage": 1,
    "idRAE": "Non",
    "object": ""A la mémoire des travailleurs chinois de la Grande guerre et du traité de Versailles"",
    "paymentConditions": "aide en numéraire",
    "paymentEndDate": 2019-10-25T00:00:00.000Z,
    "paymentStartDate": 2019-10-25T00:00:00.000Z,
    "updateDate": 2025-01-16T00:00:00.000Z,
  },
]
`;

exports[`ScdlGrantParser indexDataByPathAndAnnotate pushes error if adapters loses data 1`] = `
[
  {
    "colonne": "path.needs.adapting",
    "message": "donnée non récupérable",
    "other": "otherValue",
    "path": {
      "needs": {
        "adapting": "value-needs-adapting",
      },
    },
    "some": "someValue",
    "valeur": "value-needs-adapting",
  },
]
`;
